--- a/index.html
+++ b/index.html
@@ -2,36 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>💖 Valentine Surprise 💖</title>
+
   <style>
     body {
       background-color: #ffebf0;
       text-align: center;
       font-family: Arial, sans-serif;
-      margin-top: 100px;
+      margin-top: 8vh;
+      padding: 0 16px;
     }
+
     h1 {
       color: #e60073;
+      font-size: clamp(36px, 8vw, 60px);
     }
+
+    p {
+      font-size: clamp(20px, 4.5vw, 26px);
+      line-height: 1.5;
+      max-width: 500px;
+      margin: 20px auto;
+    }
+
+    h2 {
+      font-size: clamp(26px, 6vw, 36px);
+      margin-top: 30px;
+    }
+
     button {
-      font-size: 20px;
-      padding: 10px 20px;
+      font-size: clamp(20px, 4.5vw, 26px);
+      padding: 16px 32px;
       background-color: #ff4d88;
       color: white;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: pointer;
+      margin: 10px;
     }
+
     button:hover {
       background-color: #e60073;
     }
+
+    #response {
+      font-size: clamp(20px, 4.5vw, 26px);
+      margin-top: 30px;
+      color: #e60073;
+    }
   </style>
 </head>
+
 <body>
 
   <h1>To Rue 💕</h1>
-  <p>There will never be anyone else that will give me the joy you give me
-    you are my Philippians 1:3.</p>
+
+  <p>
+    There will never be anyone else that will give me the joy you give me.
+    You are my Philippians 1:3.
+  </p>
+
   <h2>So will you be my Valentine? 💖</h2>
 
   <button onclick="yes()">Yes 💘</button>
@@ -44,14 +75,13 @@
       document.getElementById("response").innerHTML =
         "I am glad to be spending that day only on you 💕😊";
     }
-  </script>
 
-    <script>
     function no() {
       document.getElementById("response").innerHTML =
-        "As long the Lord is with you that day I will be glad 😊";
+        "As long as the Lord is with you that day, I will be glad 😊";
     }
   </script>
 
 </body>
 </html>
+
