--- a/index.html
+++ b/index.html
@@ -5,51 +5,91 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>💖 Valentine Surprise 💖</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     body {
-      background-color: #ffebf0;
+      background: linear-gradient(180deg, #ffe6ef, #ffedf5);
       text-align: center;
-      font-family: Arial, sans-serif;
-      margin-top: 8vh;
-      padding: 0 16px;
+      font-family: 'Playfair Display', serif;
+      margin: 0;
+      padding: 8vh 16px;
+      overflow: hidden;
     }
 
     h1 {
+      font-family: 'Dancing Script', cursive;
       color: #e60073;
-      font-size: clamp(36px, 8vw, 60px);
-    }
-
-    p {
-      font-size: clamp(20px, 4.5vw, 26px);
-      line-height: 1.5;
-      max-width: 500px;
-      margin: 20px auto;
+      font-size: clamp(40px, 9vw, 64px);
+      animation: fadeIn 2s ease;
     }
 
     h2 {
       font-size: clamp(26px, 6vw, 36px);
       margin-top: 30px;
+      animation: fadeIn 2.5s ease;
+    }
+
+    p {
+      font-size: clamp(20px, 4.5vw, 26px);
+      line-height: 1.6;
+      max-width: 520px;
+      margin: 20px auto;
+      animation: fadeIn 2.2s ease;
     }
 
     button {
+      font-family: 'Playfair Display', serif;
       font-size: clamp(20px, 4.5vw, 26px);
-      padding: 16px 32px;
+      padding: 16px 34px;
       background-color: #ff4d88;
       color: white;
       border: none;
-      border-radius: 12px;
+      border-radius: 30px;
       cursor: pointer;
-      margin: 10px;
+      margin: 12px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+      transition: transform 0.2s ease;
     }
 
     button:hover {
       background-color: #e60073;
+      transform: scale(1.05);
     }
 
     #response {
+      color: #e60073;
       font-size: clamp(20px, 4.5vw, 26px);
       margin-top: 30px;
-      color: #e60073;
+      animation: fadeIn 1s ease;
+    }
+
+    .heart {
+      position: absolute;
+      bottom: -50px;
+      font-size: 24px;
+      color: #ff4d88;
+      animation: floatUp 6s linear infinite;
+      opacity: 0.7;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(0) scale(1);
+        opacity: 0;
+      }
+      10% {
+        opacity: 0.8;
+      }
+      100% {
+        transform: translateY(-110vh) scale(1.5);
+        opacity: 0;
+      }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
@@ -80,8 +120,24 @@
       document.getElementById("response").innerHTML =
         "As long as the Lord is with you that day, I will be glad 😊";
     }
+
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.innerHTML = "💖";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.animationDuration = (4 + Math.random() * 3) + "s";
+      document.body.appendChild(heart);
+
+      setTimeout(() => {
+        heart.remove();
+      }, 7000);
+    }
+
+    setInterval(createHeart, 500);
   </script>
 
 </body>
 </html>
+
 
