--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <script>
     function yes() {
       document.getElementById("response").innerHTML =
-        "I am glad to be spending that day only on you 💕😊";
+        "Never wished more than to spend time with you💕😊";
     }
 
     function no() {
